exports[`invalid(1): @variant content-body { & p {} } 1`] = `

Options:
- scopingRootAtRules:
    - 'utility'

Code:
  1 | @variant content-body { & p {} }

`;

exports[`invalid(1): @variant content-body { & p {} } 2`] = `

Message:
> 1 | @variant content-body { & p {} }
    |                         ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(1): @variant hover:focus {\n\t& .icon {\n\t\tcolor: black;\n\t}\n} 1`] = `

  1 | @variant hover:focus {
  2 | 	& .icon {
  3 | 		color: black;
  4 | 	}
  5 | }

`;

exports[`invalid(1): @variant hover:focus {\n\t& .icon {\n\t\tcolor: black;\n\t}\n} 2`] = `

Message:
  1 | @variant hover:focus {
> 2 | 	& .icon {
    | 	^ Do not use a CSS nesting selector unless an ancestor scoping context applies.
  3 | 		color: black;
  4 | 	}
  5 | }

`;

exports[`invalid(10): @scope (:is(&, .root)) to (:is(&, .limit)) {} 1`] = `

  1 | @scope (:is(&, .root)) to (:is(&, .limit)) {}

`;

exports[`invalid(10): @scope (:is(&, .root)) to (:is(&, .limit)) {} 2`] = `

Message:
> 1 | @scope (:is(&, .root)) to (:is(&, .limit)) {}
    |             ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(11): @scope (&) { & {} } 1`] = `

  1 | @scope (&) { & {} }

`;

exports[`invalid(11): @scope (&) { & {} } 2`] = `

Message:
> 1 | @scope (&) { & {} }
    |         ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(12): @foo { & p {} } 1`] = `

  1 | @foo { & p {} }

`;

exports[`invalid(12): @foo { & p {} } 2`] = `

Message:
> 1 | @foo { & p {} }
    |        ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(13): @utilities content-body { & p {} } 1`] = `

  1 | @utilities content-body { & p {} }

`;

exports[`invalid(13): @utilities content-body { & p {} } 2`] = `

Message:
> 1 | @utilities content-body { & p {} }
    |                           ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(14): @-custom-keyframes foo { & {} } 1`] = `

  1 | @-custom-keyframes foo { & {} }

`;

exports[`invalid(14): @-custom-keyframes foo { & {} } 2`] = `

Message:
> 1 | @-custom-keyframes foo { & {} }
    |                          ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(15): @-ms-keyframes foo { & {} } 1`] = `

  1 | @-ms-keyframes foo { & {} }

`;

exports[`invalid(15): @-ms-keyframes foo { & {} } 2`] = `

Message:
> 1 | @-ms-keyframes foo { & {} }
    |                      ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(16): a { @\\4B EYFRAMES foo { from { & {} } } } 1`] = `

  1 | a { @\\4B EYFRAMES foo { from { & {} } } }

`;

exports[`invalid(16): a { @\\4B EYFRAMES foo { from { & {} } } } 2`] = `

Message:
> 1 | a { @\\4B EYFRAMES foo { from { & {} } } }
    |                                ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(17): @scope { @keyframes foo { from { & {} } } } 1`] = `

  1 | @scope { @keyframes foo { from { & {} } } }

`;

exports[`invalid(17): @scope { @keyframes foo { from { & {} } } } 2`] = `

Message:
> 1 | @scope { @keyframes foo { from { & {} } } }
    |                                  ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(2): & {} 1`] = `

  1 | & {}

`;

exports[`invalid(2): & {} 2`] = `

Message:
> 1 | & {}
    | ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(2): @k content-body { & p {} } 1`] = `

Options:
- scopingRootAtRules:
    - 'K'

Code:
  1 | @k content-body { & p {} }

`;

exports[`invalid(2): @k content-body { & p {} } 2`] = `

Message:
> 1 | @k content-body { & p {} }
    |                   ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(3): &.foo {} 1`] = `

  1 | &.foo {}

`;

exports[`invalid(3): &.foo {} 2`] = `

Message:
> 1 | &.foo {}
    | ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(3): @K content-body { & p {} } 1`] = `

Options:
- scopingRootAtRules:
    - 'k'

Code:
  1 | @K content-body { & p {} }

`;

exports[`invalid(3): @K content-body { & p {} } 2`] = `

Message:
> 1 | @K content-body { & p {} }
    |                   ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(4): .foo & .bar {} 1`] = `

  1 | .foo & .bar {}

`;

exports[`invalid(4): .foo & .bar {} 2`] = `

Message:
> 1 | .foo & .bar {}
    |      ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(4): @keyframes foo { from { & {} } } 1`] = `

Options:
- scopingRootAtRules:
    - 'keyframes'

Code:
  1 | @keyframes foo { from { & {} } }

`;

exports[`invalid(4): @keyframes foo { from { & {} } } 2`] = `

Message:
> 1 | @keyframes foo { from { & {} } }
    |                         ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(5): :not(&) {} 1`] = `

  1 | :not(&) {}

`;

exports[`invalid(5): :not(&) {} 2`] = `

Message:
> 1 | :not(&) {}
    |      ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(5): @utility content-body { @keyframes foo { from { & {} } } } 1`] = `

Options:
- scopingRootAtRules:
    - 'utility'

Code:
  1 | @utility content-body { @keyframes foo { from { & {} } } }

`;

exports[`invalid(5): @utility content-body { @keyframes foo { from { & {} } } } 2`] = `

Message:
> 1 | @utility content-body { @keyframes foo { from { & {} } } }
    |                                                 ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(6): && {} 1`] = `

  1 | && {}

`;

exports[`invalid(6): && {} 2`] = `

Message:
> 1 | && {}
    | ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(6): && {} 3`] = `

Message:
> 1 | && {}
    |  ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(6): @utility content-body { & p {} } 1`] = `

Options:
- scopingRootAtRules: []

Code:
  1 | @utility content-body { & p {} }

`;

exports[`invalid(6): @utility content-body { & p {} } 2`] = `

Message:
> 1 | @utility content-body { & p {} }
    |                         ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(7): &.foo, &.bar {} 1`] = `

  1 | &.foo, &.bar {}

`;

exports[`invalid(7): &.foo, &.bar {} 2`] = `

Message:
> 1 | &.foo, &.bar {}
    | ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(7): &.foo, &.bar {} 3`] = `

Message:
> 1 | &.foo, &.bar {}
    |        ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(7): @custom-variant dark { &:where(.dark) { @slot; } } 1`] = `

Options:
- scopingRootAtRules: []

Code:
  1 | @custom-variant dark { &:where(.dark) { @slot; } }

`;

exports[`invalid(7): @custom-variant dark { &:where(.dark) { @slot; } } 2`] = `

Message:
> 1 | @custom-variant dark { &:where(.dark) { @slot; } }
    |                        ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(8): @media all { & {} }\n@supports (display: grid) { & {} }\n@layer components { & {} }\n@container (width > 1px) { & {} } 1`] = `

  1 | @media all { & {} }
  2 | @supports (display: grid) { & {} }
  3 | @layer components { & {} }
  4 | @container (width > 1px) { & {} }

`;

exports[`invalid(8): @media all { & {} }\n@supports (display: grid) { & {} }\n@layer components { & {} }\n@container (width > 1px) { & {} } 2`] = `

Message:
> 1 | @media all { & {} }
    |              ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.
  2 | @supports (display: grid) { & {} }
  3 | @layer components { & {} }
  4 | @container (width > 1px) { & {} }

`;

exports[`invalid(8): @media all { & {} }\n@supports (display: grid) { & {} }\n@layer components { & {} }\n@container (width > 1px) { & {} } 3`] = `

Message:
  1 | @media all { & {} }
> 2 | @supports (display: grid) { & {} }
    |                             ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.
  3 | @layer components { & {} }
  4 | @container (width > 1px) { & {} }

`;

exports[`invalid(8): @media all { & {} }\n@supports (display: grid) { & {} }\n@layer components { & {} }\n@container (width > 1px) { & {} } 4`] = `

Message:
  1 | @media all { & {} }
  2 | @supports (display: grid) { & {} }
> 3 | @layer components { & {} }
    |                     ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.
  4 | @container (width > 1px) { & {} }

`;

exports[`invalid(8): @media all { & {} }\n@supports (display: grid) { & {} }\n@layer components { & {} }\n@container (width > 1px) { & {} } 5`] = `

Message:
  1 | @media all { & {} }
  2 | @supports (display: grid) { & {} }
  3 | @layer components { & {} }
> 4 | @container (width > 1px) { & {} }
    |                            ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;

exports[`invalid(9): @scope (&) to (&) {} 1`] = `

  1 | @scope (&) to (&) {}

`;

exports[`invalid(9): @scope (&) to (&) {} 2`] = `

Message:
> 1 | @scope (&) to (&) {}
    |         ^ Do not use a CSS nesting selector unless an ancestor scoping context applies.

`;
